--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,5 @@
 <body>
   <div id="root"></div>
 </body>
+<script>!function(e,t,a){var c=e.head||e.getElementsByTagName("head")[0],n=e.createElement("script");n.async=!0,n.defer=!0, n.type="text/javascript",n.src=t+"/static/js/chat_widget.js?config="+JSON.stringify(a),c.appendChild(n)}(document,"https://app.engati.com",{bot_key:"bd8685d6c7ae4cbd",welcome_msg:true,branding_key:"default",server:"https://app.engati.com",e:"p" });</script>
 </html>
